RESOLVED FIXED270284
REGRESSION (275262@main): Unable to play games in PBS Kids Games app
https://bugs.webkit.org/show_bug.cgi?id=270284
Summary REGRESSION (275262@main): Unable to play games in PBS Kids Games app
Jer Noble
Reported 2024-02-28 22:47:43 PST
REGRESSION (275262@main): Unable to play games in PBS Kids Games app
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-28 22:48:36 PST
Jer Noble
Comment 2 2024-02-28 22:48:52 PST
Jer Noble
Comment 3 2024-02-28 22:58:16 PST
EWS
Comment 4 2024-03-01 02:04:42 PST
Committed 275542@main (98f2399f9450): <https://commits.webkit.org/275542@main> Reviewed commits have been landed. Closing PR #25281 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.